--- a/css/typography.scss
+++ b/css/typography.scss
@@ -8,6 +8,8 @@ table.dataTable {
 
 	th,
 	td {
+		box-sizing: border-box;
+
 		&.dt-left {
 			text-align: left;
 		}
